# masterpaster

./: .clang-format  CMakeLists.txt  MasterPaster.sln  README.md
.github/workflows/: build.yml
MasterPaster/: CMakeLists.txt  MasterPaster.rc  MasterPaster.vcxproj  MasterPaster.vcxproj.filters  clipboard.cpp  clipboard.h  ini.cpp  ini.h  io.cpp  io.h  keyboard.cpp  keyboard.h  main.cpp  resource.h  utils.cpp  utils.h
installer/: installer.vdproj  modifyMsiToEnableLaunchApplication.js
tests/: test_io.cpp  test_utils.cpp  tests.vcxproj  tests.vcxproj.filters
